# llm-council-local-improved

./: .gitignore  AGENTS.md  CHANGELOG.md  FINDINGS.md  README.md  TODO.md  config.json  pyproject.toml  run_graphiti_test.sh  setup-dev.sh  start.sh
backend/: config.py  config_loader.py  council.py  lmstudio.py  main.py  memory_service.py  model_metrics.py  research_controller.py  storage.py  tag_service.py  title_generation.py  title_service.py  tool_orchestration.py
backend/mcp/: registry.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  MarkdownRenderer.css  MarkdownRenderer.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx  TagBar.css  TagBar.jsx  ToolSteps.css  ToolSteps.jsx
mcp_servers/graphiti-custom/: Dockerfile  README.md  config.yaml  generate_config.py  graphiti_config.json  patch_factories.py  start.sh
mcp_servers/location_time/: server.py
mcp_servers/system_geo_location/: server.py
openspec/: AGENTS.md
openspec/changes/: change-026-fix-tool-result-context-prompt.md
openspec/changes/0.0.3/: CH-003-improve-title-generation-and-timeout-handling.md
openspec/changes/add-mcp-status-indicator/: proposal.md  tasks.md
openspec/changes/add-overlay-hover-delay/: proposal.md  tasks.md
openspec/changes/add-reactive-streaming/: proposal.md  tasks.md
openspec/changes/add-streaming-deliberation/: design.md  proposal.md  tasks.md
scripts/: reconstruct_conversation.py
tests/: scenarios.json  test_graphiti.py
(+10 files in other folders)
